--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,27 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+.progress-bar{
+  position: relative;
+  height: 2px;
+  width: 550px;
+  border-radius: 5px;
+  border: 1px solid black;
+
+}
+
+.progress-bar .fill {
+  height: 100%;
+  background-color: green;
+}
+
+@keyframes fill {
+  0% {
+    width: 0%;
+  }
+  100% {
+    width: 100%;
+  }
+}
+
